# nabu

./: .air.toml  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  action.yml  codecov.yml  go.mod  go.sum  main.go  makefile  mkdocs.yml  test.sh  tygo.yaml
.github/workflows/: cargo_test.yml  docker.yml  frontend.yml  geoconnex_e2e.yml  github_pages.yml  go_lint.yml  go_tests.yml  google_s3_ping.yml  nabu_integrated_test.yml  push_to_dockerhub.yml  python_test.yml  release_nabu.yml  test_coverage.yml  test_nabu.yml
cmd/gleaner/: harvest.go  harvest_test.go  helpers.go  helpers_test.go  root.go  root_integration_test.go  root_test.go  sitemap.go  sitemap_index.go  sitemap_test.go  storage.go  storage_test.go
cmd/nabu/: clear.go  harvest.go  harvest_integration_test.go  harvest_test.go  main.go  main_test.go  object.go  prefix.go  release.go  root.go  root_test.go  shacl_validate.go  sync.go  test.go
cmd/pidServer/: main.go  readme.md
config/: gleanerconfig.yaml
config/iow/: gleanerconfig.yaml  google.yaml  nabuconfig.yaml
crawl-status/: eslint.config.js  package-lock.json
crawl-status-page/: .env  .env.development  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
crawl-status-page/src/: App.css  App.tsx  CrawlFailureTable.tsx  CrawlStatusDashboard.module.css  CrawlStatusDashboard.tsx  CrawlWarningTable.tsx  Header.tsx  ServiceStatus.tsx  SitemapIndexInfo.tsx  env.ts  generated_types.ts  lib.ts  main.tsx  types.ts  vite-env.d.ts  vocab.json
crawl-status/public/: example_crawl_stats.json
crawl-status/src/: App.tsx  CrawlStatusDashboard.module.css  env.ts  main.tsx  types.ts
docker/: entrypoint.sh
docs/: README.md  details.md  docs.md  nabu_overview.md
examples/: Docker-compose.yml  e2eAgainstLocalInfra.sh  exploreS3AfterHarvest.sh  harvest-usgs-source.sh  harvestDevSitemap.sh  harvestFullSitemap.sh  harvestGagesThenReleaseAndPull.sh  harvestProdSitemap.sh  harvestProdSitemapWithBulkSource.sh  harvestThenReleaseAndPull.sh  harvestThenSync.sh  harvestWWDHThenReleaseAndPull.sh  profileSync.sh  shaclValidateHarvest.sh  startJaeger.sh  stats.jsonld  traceHarvest.sh
examples/containers/: clearGraphdb.sh  startGraphdb.sh  startJaeger.sh  startMinio.sh
gleaner/: err_group.go  harvest.go  sitemap.go  sitemap_test.go
internal/common/: environment.go  environment_test.go  hash.go  hash_test.go  helpers.go  http.go  http_client.go  http_client_test.go  http_test.go  jsonld.go  jsonld_standardize.go  jsonld_standardize_test.go  jsonld_test.go  logger.go  nqToNTc.go  pipecopy.go  pipeload.go  rdfConversions.go  rdfConversions_test.go  readme.md  skolemize.go  skolemize_test.go  toFromRDF.go  urn.go  urn_test.go
internal/config/: config.go  config_test.go
internal/crawl/: err_group.go  helpers.go  helpers_test.go  http_client.go  http_client_test.go  orgs.go  orgs_test.go  prov.go  prov_test.go  render.go  render_test.go  shacl.go  shacl_test.go  site.go  site_test.go  sitemap.go  sitemap_bulk.go  sitemap_bulk_test.go  sitemap_index.go  sitemap_index_config.go  sitemap_index_test.go  stats.go  (+2 more)
pkg/: bulk.go  clear.go  drain.go  graphdb.go  meili.go  object.go  ogcProcess.go  prefix.go  prune.go  release.go  stats.go  stats_test.go
scripts/: clean_report.r  gleanerFullsitemapHarvest.sh  gleanerMinioExplore.sh  gleanerShaclValidate.sh  gleanerSyncNabu.sh  nabuWithTracing.sh  readme.md  report.r  runGleanerAndOpenJaeger.sh  runGleanerAndOpenUI.sh  runGleanerAndSyncWithNabu.sh  startGraphdb.sh
shacl_validator/: .dockerignore  Cargo.toml  Dockerfile_py  Dockerfile_rs  makefile  shacl_validator.proto
shacl_validator/server/: Cargo.toml
shacl_validator/shacl_validator_grpc_py/: .dockerignore  README.md  cli.py  geoconnex_gen.py  lib.py  lib_test.py  makefile  pyproject.toml  server.py  server_test.py  shacl_validator_pb2.py  shacl_validator_pb2.pyi
shacl_validator/shacl_validator_grpc_py/src/: cli.py  geoconnex_gen.py  lib.py  lib_test.py  mainstems.py  server.py  server_test.py  shacl_validator_pb2.py  shacl_validator_pb2_grpc.py
shacl_validator/shacl_validator_grpc_py/testdata/: full_docs.jsonld
shacl_validator/shacl_validator_grpc_py/testdata/invalid/: without_type_place.jsonld
shacl_validator/shacl_validator_grpc_rs/: Cargo.toml  readme.md
shacl_validator/shacl_validator_grpc_rs/src/: lib.rs  main.rs
shacl_validator/shacl_validator_grpc_rs/wasm_exportable_lib/: Cargo.toml  index.html  makefile  test.html
shacl_validator/shacl_validator_grpc_rs/wasm_exportable_lib/src/: lib.rs
shacl_validator_gprc_py/: lib.py  pyproject.toml
shacl_validator_gprc_py/testdata/: mainstems_1.jsonld
shacl_validator_gprc_py/testdata/invalid/: same_as.jsonld
shacl_validator_grpc/: Cargo.toml  build.rs  readme.md  wasm.sh
shacl_validator_grpc/proto/: shacl_validator.proto
shacl_validator_grpc/scripts/: check.sh
shacl_validator_grpc/shapes/: dataset-oriented.jsonld  locationOriented.ttl
shacl_validator_grpc/src/: lib.rs  main.rs  validation.rs  wasm.rs
shacl_validator_grpc/src/testdata/: fullLocationOrientedExample.nq  fullLocationOrientedInvalidExample.nq  locationOrientedInvalidExample.ttl  ref_dam.jsonld
shacl_validator_grpc_py/: Dockerfile  lib.py  makefile  pyproject.toml  server.py  shacl_validator_pb2.pyi
shacl_validator_grpc_py/protoBuild/: shacl_validator_pb2.py  shacl_validator_pb2_grpc.py
shacl_validator_grpc_py/scripts/: check.sh
shacl_validator_grpc_py/testdata/: containing_catchment.jsonld  huc10_items_0101000201.jsonld
shacl_validator_grpc_py/testdata/invalid/: mainstems_1.jsonld
terraform/: .terraform.lock.hcl  main.tf  readme.md  variables.tf
testHelpers/: gleaner.go  gleaner_container.go  gleaner_container_test.go  gleaner_test.go  helpers.go  helpers_test.go  readme.md
triples_to_geoparquet/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
triples_to_geoparquet/src/: lib.rs  main.rs  parquet_lib.rs  test.rs  tests.rs  triples_lib.rs
triples_to_geoparquet/src/testdata/: missing_schema_geo.nq  ref_gages_gages__0_release.nq
(+284 files in other folders)
