# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: Apache-2.0

[package]
name = "shacl_validator_grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
shacl_validation = "0.1.60"
prefixmap = "0.1.60"
srdf = "0.1.60"
sparql_service = "0.1.60"
json-ld = { version = "0.21.2", features = ["reqwest"] }
rdf-types = "0.22.5"

[build-dependencies]
tonic-build = "*"
