# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: Apache-2.0

[package]
name = "triples_to_geoparquet"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
arrow-array = { version = "56.2.0", default-features = false }
arrow-schema = { version = "56.2.0", default-features = false }
parquet = { version = "56.2.0", default-features = false, features = ["arrow"] }
env_logger = "0.11.8"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib"] }
geo-types = "0.7.18"
geoarrow-array = "0.6.2"
geoarrow-schema = "0.6.2"
geoparquet = "0.6.2"
log = "0.4.29"
oxrdf = "0.3.2"
oxttl = "0.2.1"
threadpool = "1.8.1"
wkt = "0.14.0"
