# Copyright 2025 Lincoln Institute of Land Policy
# SPDX-License-Identifier: Apache-2.0

[package]
name = "triples_to_geoparquet"
version = "0.1.0"
edition = "2024"

[dependencies]
argh = "0.1.13"
arrow-array = { version = "56.2.0", default-features = false }
arrow-schema = { version = "56.2.0", default-features = false }
parquet = { version = "56.2.0", default-features = false, features = [] }
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }
geo-types = "0.7.18"
geoarrow-array = { version = "0.6.2", default-features = false }
geoarrow-schema = { version = "0.6.2", default-features = false }
geoparquet = { version = "0.6.2", default-features = false, features = []}
log = "0.4.29"
oxrdf = "0.3.2"
oxttl = "0.2.1"
threadpool = "1.8.1"
wkt = "0.14.0"
